--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Hello World!</title>
   </head>
   <body>
-    <h1>Love Yoy</h1>
+    <h1>Love You</h1>
     <img src="grumpy.jpg" alt="Grumpy Cat">
   </body>
 </html>
